# analisis-electoral-2025

./: README.md  pyproject.toml
Inputs/Diputados/: Diputados Total Votación del Distrito - DISTRITO 1.xlsx  Diputados Total Votación del Distrito - DISTRITO 10.xlsx  Diputados Total Votación del Distrito - DISTRITO 11.xlsx  Diputados Total Votación del Distrito - DISTRITO 12.xlsx  Diputados Total Votación del Distrito - DISTRITO 13.xlsx  Diputados Total Votación del Distrito - DISTRITO 14.xlsx  Diputados Total Votación del Distrito - DISTRITO 15.xlsx  Diputados Total Votación del Distrito - DISTRITO 16.xlsx  Diputados Total Votación del Distrito - DISTRITO 17.xlsx  Diputados Total Votación del Distrito - DISTRITO 18.xlsx  Diputados Total Votación del Distrito - DISTRITO 19.xlsx  Diputados Total Votación del Distrito - DISTRITO 2.xlsx  Diputados Total Votación del Distrito - DISTRITO 20.xlsx  Diputados Total Votación del Distrito - DISTRITO 21.xlsx  Diputados Total Votación del Distrito - DISTRITO 22.xlsx  Diputados Total Votación del Distrito - DISTRITO 23.xlsx  Diputados Total Votación del Distrito - DISTRITO 24.xlsx  Diputados Total Votación del Distrito - DISTRITO 25.xlsx  Diputados Total Votación del Distrito - DISTRITO 26.xlsx  Diputados Total Votación del Distrito - DISTRITO 27.xlsx  Diputados Total Votación del Distrito - DISTRITO 28.xlsx  Diputados Total Votación del Distrito - DISTRITO 3.xlsx  Diputados Total Votación del Distrito - DISTRITO 4.xlsx  (+5 more)
src/analisis_electoral/: dhondt.py  (+3 more)
tests/: test_indifference_loss.py  test_subpact_allocation.py  test_winners.py
(+11 files in other folders)
